[gd_scene format=3 uid="uid://bhk45cagwg42x"]

[ext_resource type="Script" uid="uid://7fgwg7st8w0y" path="res://main_game/hud.gd" id="1_riflj"]
[ext_resource type="FontFile" uid="uid://bu3fgtpct0bl0" path="res://assets/PatrickHandSC-Regular.ttf" id="2_cj4qp"]

[node name="Hud" type="CanvasLayer" unique_id=190957759]
script = ExtResource("1_riflj")

[node name="Control" type="Control" parent="." unique_id=392376605]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -170.0
offset_right = 20.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Control" unique_id=1960163562]
layout_mode = 0
offset_right = 40.0
offset_bottom = 81.0

[node name="EvidenceLabel" type="Label" parent="Control/VBoxContainer" unique_id=738955444]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cj4qp")
theme_override_font_sizes/font_size = 20

[node name="BuildingsLabel" type="Label" parent="Control/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cj4qp")
theme_override_font_sizes/font_size = 20
text = "Buildings: 0/3"

[node name="EmotionRow" type="HBoxContainer" parent="Control/VBoxContainer" unique_id=750696632]
layout_mode = 2

[node name="EmotionIcon" type="TextureRect" parent="Control/VBoxContainer/EmotionRow" unique_id=1736996198]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
stretch_mode = 5

[node name="EmotionLabel" type="Label" parent="Control/VBoxContainer/EmotionRow" unique_id=1052274160]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_cj4qp")
theme_override_font_sizes/font_size = 20

[node name="DurationBar" type="ProgressBar" parent="Control/VBoxContainer" unique_id=1663121440]
layout_mode = 2
